# Project-Damocles

./: .gitignore  CMakeLists.txt  CQHandler.py  CQRemoteServer.py  CQSDK.py  CqRemoteHandler.py  CqRemoteServer.py  commandparser.py  rollbattle.py
CQPdemo/: CQPDemo.vcxproj  CQPDemo.vcxproj.filters  CqPyHandlerWrapper.cpp  CqPyHandlerWrapper.h  appmain.cpp  appmain.h  cqp.h  dllmain.cpp  pw.libc.Damocles.json  stdafx.h  team.vidar.Damocles.json  utils.cpp  utils.h
team.vidar.Damocles/: CQHandler.py  README.md  commandparser.py  keywordchain.py
